src/test/ui/rfc-2008-non-exhaustive/invalid-attribute.stderr
error: attribute must be of the form `#[non_exhaustive]`
  --> $DIR/invalid-attribute.rs:3:1
   |
LL | #[non_exhaustive(anything)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0701]: attribute can only be applied to a struct or enum
  --> $DIR/invalid-attribute.rs:7:1
   |
LL | #[non_exhaustive]
   | ^^^^^^^^^^^^^^^^^
LL |
LL | trait Bar { }
   | ------------- not a struct or enum

error[E0701]: attribute can only be applied to a struct or enum
  --> $DIR/invalid-attribute.rs:11:1
   |
LL |   #[non_exhaustive]
   |   ^^^^^^^^^^^^^^^^^
LL |
LL | / union Baz {
LL | |     f1: u16,
LL | |     f2: u16
LL | | }
   | |_- not a struct or enum

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0701`.
